# spin-geospatial-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  load-libraries.sh  spin.toml  test-flow.sh
docs/: ARCHITECTURE.md  DIAGRAMS.md
sample-data/: us_libraries.csv
src/: geohash.rs  kv.rs  lib.rs  models.rs  spatial_store.rs
static/: index.html
