[package]
name = "spin-geospatial-demo"
version = "0.1.0"
edition = "2021"
authors = ["ccie7599 <brian@apley.net>"]
description = "Geohash-based spatial proximity service on Fermyon Spin / Akamai Functions, with a Spin KV spatial index using cell painting and upward write amplification."
license = "MIT"
repository = "https://github.com/ccie7599/spin-geospatial-demo"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = "3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
